# Auralis

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  UNINSTALL.md  create_deb_pkg.sh
capture/: CMakeLists.txt
capture/examples/: README.md
capture/examples/cpp/: CMakeLists.txt  main.cpp
capture/examples/python/: CMakeLists.txt  README.md  binding.cpp  main.py  setup.py
capture/include/auralis/capture/: config.hpp  config_manager.hpp  device_manager.hpp  stream.hpp
capture/python-binding/debian/: changelog  control  copyright
capture/src/: config.cpp  config_manager.cpp  device_manager.cpp  stream.cpp
capture/tests/: CMakeLists.txt  test_config.cpp  test_stream.cpp
cmake/: AuralisConfig.cmake.in
debian/: changelog  control  copyright  libauralis-capture-dev.install  libauralis-capture0.install
